// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Resolver Correctly Resolves Create Policy Mutation 1`] = `
Object {
  "data": Object {
    "createPolicy": Array [
      Object {
        "apiVersion": "policy.mcm.ibm.com/v1alpha1",
        "kind": "Policy",
        "metadata": Object {
          "creationTimestamp": "2018-09-06T17:12:34Z",
          "generation": 1,
          "name": "test-policy",
          "namespace": "default",
          "resourceVersion": "4385854",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/default/policies/test-policy",
          "uid": "0c388331-b1f8-11e8-9a12-005056a0d11b",
        },
        "spec": Object {
          "namespaces": Object {
            "exclude": Array [
              "kube*",
            ],
            "include": Array [
              "default",
            ],
          },
          "remediationAction": "enforce",
          "role-templates": Array [
            Object {
              "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
              "complianceType": "musthave",
              "kind": "RoleTemplate",
              "metadata": Object {
                "name": "test-role",
                "namespace": "",
              },
              "rules": Array [
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "extensions",
                      "apps",
                    ],
                    "resources": Array [
                      "deployments",
                    ],
                    "verbs": Array [
                      "get",
                      "list",
                      "watch",
                      "delete",
                    ],
                  },
                  "complianceType": "musthave",
                },
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "core",
                    ],
                    "resources": Array [
                      "pods",
                    ],
                    "verbs": Array [
                      "create",
                      "update",
                      "patch",
                    ],
                  },
                  "complianceType": "mustnothave",
                },
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "core",
                    ],
                    "resources": Array [
                      "secrets",
                    ],
                    "verbs": Array [
                      "get",
                      "watch",
                      "list",
                      "create",
                      "delete",
                      "update",
                      "patch",
                    ],
                  },
                },
              ],
              "selector": Object {
                "matchLabels": Object {
                  "cloud": "IBM",
                },
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Delete Policy Mutation 1`] = `
Object {
  "data": Object {
    "deletePolicy": "test-policy",
  },
}
`;

exports[`Policy Resolver Correctly Resolves Policy List Query 1`] = `
Object {
  "data": Object {
    "policies": Array [
      Object {
        "enforcement": "inform",
        "metadata": Object {
          "name": "policy-xz-1",
          "namespace": "mycluster",
        },
        "status": "NonCompliant",
      },
      Object {
        "enforcement": "enforce",
        "metadata": Object {
          "name": "policy-xz-2",
          "namespace": "mycluster",
        },
        "status": "Compliant",
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Single Policy Query 1`] = `
Object {
  "data": Object {
    "policies": Array [
      Object {
        "detail": Object {
          "exclude_namespace": Array [
            "kube*",
          ],
          "include_namespace": Array [
            "default",
          ],
        },
        "enforcement": "inform",
        "metadata": Object {
          "name": "policy-xz-1",
          "namespace": "mycluster",
        },
        "rules": Array [
          Object {
            "ruleUID": "role-xz-1-rule-0",
          },
        ],
        "status": "NonCompliant",
        "templates": Array [
          Object {
            "name": "role-xz-1",
          },
        ],
        "violations": Array [
          Object {
            "name": "role-xz-1",
          },
        ],
      },
    ],
  },
}
`;
